--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
-    "@hookform/resolvers": "^5.0.1",
+    "@hookform/resolvers": "latest",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
@@ -46,21 +46,21 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
-    "framer-motion": "^12.6.3",
+    "framer-motion": "latest",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.487.0",
+    "lucide-react": "latest",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.55.0",
+    "react-hook-form": "latest",
     "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^2.1.7",
     "react-responsive": "^10.0.1",
     "recharts": "^2.15.2",
     "sonner": "latest",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2",
+    "zod": "latest",
     "@supabase/supabase-js": "latest"
   },
   "devDependencies": {
